# ============================================================
# pyproject.toml — stellar 🌟
# High-quality image upscaling CLI tool
# https://github.com/pro-grammer-SD/stellar
# ============================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------
# Project metadata
# ------------------------------------------------------------

[project]
name        = "stellar"
version     = "1.0.0"
description = "🌟 stellar — high-quality image upscaling from the command line"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Soumalya Das", email = "geniussantu1983@gmail.com" },
]

keywords = [
  "image", "upscale", "super-resolution", "PIL", "Pillow",
  "OpenCV", "CLI", "typer", "batch",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Utilities",
]

# Runtime dependencies
dependencies = [
  "Pillow>=10.0.0",
  "opencv-python>=4.8.0",
  "scikit-learn>=1.3.0",
  "typer>=0.12.0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
]

# Optional extras
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0",
]

# ------------------------------------------------------------
# CLI entry-point  →  `stellar` command maps to upscale()
# ------------------------------------------------------------

[project.scripts]
stellar = "stellar:app"

# ------------------------------------------------------------
# Project URLs
# ------------------------------------------------------------

[project.urls]
Homepage      = "https://github.com/pro-grammer-SD/stellar"
Repository    = "https://github.com/pro-grammer-SD/stellar"
"Bug Tracker" = "https://github.com/pro-grammer-SD/stellar/issues"
Changelog     = "https://github.com/pro-grammer-SD/stellar/releases"

# ------------------------------------------------------------
# Setuptools configuration
# ------------------------------------------------------------

[tool.setuptools]
py-modules = ["stellar"]   # single-module package (stellar.py at root)

# ------------------------------------------------------------
# Ruff (linter / formatter)
# ------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

# ------------------------------------------------------------
# Mypy
# ------------------------------------------------------------

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true

# ------------------------------------------------------------
# Pytest
# ------------------------------------------------------------

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
